# morphometrics

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
examples/: clustered_shapes.h5ad  label_expansion.py  labeling_example.py  measure_with_widget.py  mesh_binary_mask.ipynb  object_classification.ipynb  object_classification_morphometrics.ipynb  radial_menu.py  registered_measurements.py  surface_distance_measurement.ipynb
src/morphometrics/: __init__.py  _sample_data.py  napari.yaml  types.py
src/morphometrics/_gui/_qt/: annotation_widgets.py  labeling_widgets.py  measurement_widgets.py  multiple_viewer_widget.py  radial_menu.py
src/morphometrics/_gui/_qt/_tests/: test_annotation_widgets.py
src/morphometrics/_gui/label_curator/: label_cleaning.py  label_curator.py  label_painting.py  qt_label_curator.py  qt_substack_viewer.py  substack_viewer.py
src/morphometrics/_gui/label_curator/_tests/: test_label_cleaning.py  test_label_curator.py  test_substack_viewer.py
src/morphometrics/_gui/models/: annotation_model.py  labeling_model.py
src/morphometrics/_gui/models/_tests/: test_annotation_model.py  test_labeling_model.py
src/morphometrics/_qt/: clustering_widgets.py  measurement_widgets.py
src/morphometrics/_tests/: test_sample_data.py  test_types.py  test_widget.py
src/morphometrics/data/: __init__.py  intensity_image.py  label_image.py
src/morphometrics/explore/: cluster.py  dimensionality_reduction.py  explore_utils.py  sample.py
src/morphometrics/explore/_tests/: _explore_test_utils.py  sample.py  test_cluster.py  test_dimensionality_reduction.py  test_explore_utils.py  test_sample.py
src/morphometrics/label/: image_utils.py  stitch.py
src/morphometrics/label/_tests/: test_image_utils.py  test_stitch.py
src/morphometrics/measure/: __init__.py  intensity.py  label.py  measure.py  mesh.py  neighborhood.py  surface.py
src/morphometrics/measure/_tests/: test_intensity.py  test_label.py  test_mesh.py  test_neighborhood.py  test_surface.py
src/morphometrics/segment/: load_czi.py  main.py  plantseg_original_config.yaml  post_process.py  pre_process.py  prepare_image.py  segment.py
src/morphometrics/segment/_test/: test_post_process_image.py  test_pre_process.py
src/morphometrics/skeleton/: constants.py  model.py
src/morphometrics/skeleton/_tests/: conftest.py  test_model.py
src/morphometrics/utils/: anndata_utils.py  environment_utils.py  image_utils.py  math_utils.py  napari_utils.py  surface_utils.py  table_utils.py
src/morphometrics/utils/_tests/: test_anndata_utils.py  test_image_utils.py  test_math_utils.py  test_surface_utils.py  test_table_utils.py
