[metadata]
name = morphometrics

author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
url = https://github.com/kevinyamauchi/morphometrics
license = BSD-3-Clause
description = A plugin for quantifying shape and neighborhoods from images.
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/morphometrics/issues
    Documentation = https://github.com/kevinyamauchi/morphometrics#README.md
    Source Code = https://github.com/kevinyamauchi/morphometrics
    User Support = https://github.com/kevinyamauchi/morphometrics/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
morphometrics = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    morphometrics = morphometrics:napari.yaml
