[metadata]
name = morphometrics
description = A plugin for quantifying shape and neighborhoods from images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevinyamauchi/morphometrics
author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
include_package_data = True
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/morphometrics/issues
    Documentation = https://github.com/kevinyamauchi/morphometrics#README.md
    Source Code = https://github.com/kevinyamauchi/morphometrics
    User Support = https://github.com/kevinyamauchi/morphometrics/issues

[options]
packages = find:
install_requires =
    numpy
    scikit-image
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    morphometrics = morphometrics:napari.yaml

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-qt

[options.package_data]
morphometrics =
    napari.yaml

[flake8]
max-line-length = 88
ignore = E203,W503,E501,C901,D401
exclude = _vendor,vendored,__init__.py,examples
